--- a/module.html
+++ b/module.html
@@ -16,7 +16,8 @@
 <body>
   <div id="load" style="margin-top: 200px; margin-bottom: 1000px; text-align: center">
     <img src="./res/images/loading.gif" width="50px">
-    <div style="margin-top: 50px; font-size: 30px;">正在加载模型,这可能需要消耗约30秒...</div>
+    <div style="margin-top: 50px; font-size: 30px;">正在加载模型...<br>
+      取决于网络状态, 这可能需要消耗约1-2分钟...</div>
   </div>
   <script src="./res/WaterPump.js"></script>
 </body>
