--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 
       <div class="parts_color">
         <button v-for="(item,index) in parts" @click="changePartsColor(index,event)"
-          @click.right="clearPartsColor(index,event)">
+          @click.right="clearPartsColor(index,event)" disabled="disabled">
           {{ item }}
         </button>
       </div><br>
 
       <div class="container">
-        <!-- <script src="./res/WaterPump.js"></script> -->
         <iframe src="module.html" width="100%" height="800px" scrolling="no"></iframe>
       </div>
 
