--- a/data.html
+++ b/data.html
@@ -13,6 +13,7 @@
   <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="./res/data_request.js"></script>
   <script type="text/javascript" src="./res/mainjs.js"></script>
+  <script type="text/javascript" src="./res/server.js"></script>
 </head>
 
 <body>
