--- a/module.html
+++ b/module.html
@@ -12,6 +12,7 @@
   <script src="./res/lib/lib2/MTLLoader.js"></script>
   <script src="./res/lib/lib2/controls/OrbitControls.js"></script>
   <script type="text/javascript" src="./res/data_request.js"></script>
+  <script type="text/javascript" src="./res/server.js"></script>
 </head>
 
 <body>
