--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+  <p>Attention: This site is no longer under maintance.</p>
+  <a href='http://mcfl.top'>Click here to go back to the home page.</a>
+  
   <div class="div_view">
 
     <div class="tab_selector">
